# hanukkah-of-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
hanukkah_of_data/: bootstrap.py  constants.py  utils.py
hanukkah_of_data/twenty_twenty_two/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb
